# sdr-and-transfer-ifacess

./: .gitignore  .gitmodules  1.pptx  CMakeLists.txt  DataGenerator.cpp  DataGenerator.h  HackRFControl.cpp  HackRFControl.h  IRFControl.h  IRFControl.h.gch  ISDRStreamTransfer.h  IStreamControl.h  ITransferControl.h  ITransferEmulator.cpp  ITransferEmulator.h  ITransferParams.h  README.md  RFConfig.h  SDREmulator.cpp  SDREmulator.h  SdrStreamControlWrapper.cpp  SdrStreamControlWrapper.h  TransferEmulator.cpp  TransferEmulator.h  deleteMe.cpp  main.cpp  receive.cpp  test.cpp  wav.cpp  wav.h
old/: HackRFControl.cpp  HackRFControl.h  HackRFControlPast.cpp  IRFControlPast.h  receive.cpp
rtlsdr_control/: CMakeLists.txt
rtlsdr_control/include/rtlsdr_control/: rtlsdr_control.h
rtlsdr_control/src/rtlsdr_control/: rtlsdr_control.cpp
rtlsdr_control/test/: test.cpp
sdr_emulator/: CMakeLists.txt
sdr_emulator/include/sdr_emulator/: sdr_emulator.h
sdr_emulator/src/sdr_emulator/: SdrStreamControlWrapper.cpp  sdr_emulator.cpp  transfer_emulator.cpp
sdr_emulator/test/: test.cpp
sdr_rf_interface/: CMakeLists.txt
sdr_rf_interface/include/sdr_rf_interface/: sdr_rf.h
transfer_interface/: CMakeLists.txt
transfer_interface/include/transfer_interface/: transfer.h
