#cmake_minimum_required(VERSION 3.8)
project(rfi_base_on_libhackrf_test LANGUAGES C CXX)
if(POLICY CMP0048)
    cmake_policy(SET CMP0048 NEW)
endif()
add_subdirectory(transfer_interface)
add_subdirectory(sdr_emulator)
add_subdirectory(sdr_rf_interface)
add_subdirectory(rtlsdr_control)
#add_subdirectory(extern/rtlsdr)
#target_include_directories(rtlsdr PUBLIC ${CMAKE_SOURCE_DIR}/extern/rtlsdr/include)
